Kubernetes/Deployments/emqx-mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emqx-service
spec:
  selector:
    app: emqx
  ports:
  - protocol: TCP
    port: 1883
    targetPort: 1883
    name: mqtt
  - protocol: TCP
    port: 8883
    targetPort: 8883
    name: mqtts
  - protocol: TCP
    port: 8083
    targetPort: 8083
    name: ws-mqtt
  - protocol: TCP
    port: 8084
    targetPort: 8084
    name: wss-mqtt
  type: LoadBalancer
