Kubernetes/Deployments/emqx-mqtt/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mqtt-emqx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`emqx.<YourDomainHere>`)
      kind: Rule
      services:
        - name: mqtt-emqx
          port: 18083
      middlewares:
        - name: default-headers
  tls:
    secretName: <your-certifikate-here>
